--- a/index.html
+++ b/index.html
@@ -3,13 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Armada</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <div class="container">
     <div class="nav">
+     <div class="head_nav">
+      <div class="head_text"><p>Наша сила в вашем успехе !</p></div>
+        <div class="second_head_text">
+        <p>Нужна помощь? Свяжитесь с нашим экспретом</p>
+        <div class="contact"><a href="#">+996 (553) 993 342</a></div>
+        </div>
+    </div>
       <div class="navbar">
+        <img src="img/7d9348d0088bc365d85a7f5eb4546d7f.png" width="147px" height="47px" alt="">
         <ul>
           <li>Услуги</li>
           <li>О нас</li>
@@ -20,6 +28,37 @@
         <div class="nav_button"><button>Скачать прайс</button></div>
       </div>
     </div>
+    <div class="bd block">
+      <div class="main text">
+        <h2 style="text-align: center;">Наши преимущества</h2>
+      </div>
+      <div class="items">
+        <div class="co-items">
+          <div class="blocks">
+          <img src="img/icons8-clock-50.png" width="48" alt="">
+          <p>Оперативность</p>
+          </div>
+        </div>
+        <div class="co-items">
+          <div class="blocks">
+          <img src="img/icons8-book-50.png" width="48" alt="">
+          <p>Высококваливицированные специалисты</p>
+          </div>
+        </div>
+        <div class="co-items">
+          <div class="blocks">
+          <img src="img/icons8-technology-50.png" width="48" alt="">
+          <p>Современное оборудование</p></div>
+        </div>
+        <div class="co-items">
+          <div class="blocks">
+          <img src="img/icons8-paper-50 (1).png" width="48" alt="">
+          <p>Современное оборудование</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </div>
 </body>
 </html>
